--- a/index.html
+++ b/index.html
@@ -568,5 +568,11 @@
         updateProgress();
         updateStory();
     </script>
+
+    <footer>
+  © 2025 xker8 This work is licensed under a Creative Commons Attribution 4.0 International License.
+    </footer>
+
+    
 </body>
 </html>
