--- a/index.html
+++ b/index.html
@@ -301,6 +301,15 @@
                 width: 100%;
                 max-width: 300px;
             }
+            footer {
+                text-align: center;
+                padding: 20px;
+                color: white;
+                font-size: 0.9em;
+                background-color: rgba(0, 0, 0, 0.2);
+                margin-top: 50px;
+            }
+
         }
     </style>
 </head>
