--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         footer {
             text-align: center;
             padding: 20px;
-            color: white;
+            color: #ffffff; /* หรือ white */
             font-size: 0.9em;
-            background-color: rgba(0, 0, 0, 0.2);
+            background-color: rgba(0, 0, 0, 0.3);
             margin-top: 50px;
+            font-weight: 500;
         }
+
         
         .container {
             max-width: 1200px;
